CPP: Excercise 1- Done

--- a/TCP-zad2/CPP/CMakeLists.txt
+++ b/TCP-zad2/CPP/CMakeLists.txt
@@ -7,4 +7,8 @@ set(CMAKE_CXX_COMPILER g++)
 project(PSI_LAB2 VERSION 0.1 LANGUAGES CXX)
 file(GLOB_RECURSE SRC ${CMAKE_SOURCE_DIR}/source/*.cpp)
 add_executable(program main.cpp ${SRC})
+add_executable(server server-solution.cpp ${SRC})
+add_executable(client client-solution.cpp ${SRC})
 target_include_directories(program PUBLIC BEFORE ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(server PUBLIC BEFORE ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(client PUBLIC BEFORE ${CMAKE_SOURCE_DIR}/include)
